force-app/main/default/objects/SVMXC__Case_Line__c/SVMXC__Case_Line__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Case Line</description>
    <label>Case Line</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>