force-app/main/default/objects/SVMXC__Case_Line__c/fields/Associated_Product__c.field-meta.xml
<CustomField>
    <fullName>Associated_Product__c</fullName>
    <label>Associated Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>