force-app/main/default/objects/SVMXC__Case_Line__c/fields/IVD_Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>IVD_Product_Identifier__c</fullName>
    <description>Field to identify if the related product is an IVD product</description>
    <formula>AND(
        OR(
        AND(
        OR(
        CONTAINS(SVMXC__Product__r.Regulatory_Type__c,&apos;DX&apos;),
        SVMXC__Product__r.Regulatory_Type__c == &apos;IUO&apos;,
        SVMXC__Product__r.Regulatory_Type__c == &apos;EUA&apos;
        ),
        OR(
        Text(Installed_Product_Upgrade_Type__c)==&apos;NONE&apos;,
        ISBLANK(Text(Installed_Product_Upgrade_Type__c))
        )
        ),
        TEXT(Installed_Product_Upgrade_Type__c)==&apos;IVD&apos;
        ),
        NOT(TEXT(SVMXC__Case__r.QA_Review__c) =&apos;Non IVD Product&apos;)
        )</formula>
    <label>IVD Product Identifier</label>
    <type>Checkbox</type>
</CustomField>