force-app/main/default/objects/SVMXC__Case_Line__c/fields/Lot_Serial__c.field-meta.xml
<CustomField>
    <fullName>Lot_Serial__c</fullName>
    <description>To capture the serial number of the associated installed product</description>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>