force-app/main/default/objects/SVMXC__Case_Line__c/fields/Proactive_Run_Detail__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Run_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field used to populate the parent Proactive record</description>
    <label>Proactive Run Detail</label>
    <referenceTo>Proactive_Run_Detail__c</referenceTo>
    <relationshipLabel>Case Lines</relationshipLabel>
    <relationshipName>Case_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>