force-app/main/default/objects/SVMXC__Case_Line__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>To capture the product category of product. It flows through formula</description>
    <formula>TEXT(SVMXC__Product__r.Product_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>