force-app/main/default/objects/SVMXC__Case_Line__c/fields/Product_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Lot_Number__c</fullName>
    <description>Text field to store Lot Number of the Product.</description>
    <label>Product Lot Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>