force-app/main/default/objects/SVMXC__Case_Line__c/fields/Product_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Serial_Number__c</fullName>
    <businessOwnerUser>ddunphy@illumina.com</businessOwnerUser>
    <description>To capture the serial number of the associated installed product</description>
    <label>Product Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>