force-app/main/default/objects/SVMXC__Case_Line__c/fields/Reason_Recall_Not_Performed_Declined__c.field-meta.xml
<CustomField>
    <fullName>Reason_Recall_Not_Performed_Declined__c</fullName>
    <description>Provide the reason the recall activity was not performed. For Other, populate the reason in case Description</description>
    <inlineHelpText>Provide the reason the recall activity was not performed. For Other, populate the reason in case Description</inlineHelpText>
    <label>Reason Recall Not Performed / Declined</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Recall_Activity__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer does not have product</fullName>
            </value>
            <value>
                <fullName>Customer does not want to stop operations to perform action</fullName>
            </value>
            <value>
                <fullName>Other (populate in case Description)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>