force-app/main/default/objects/SVMXC__Case_Line__c/fields/Show_On_Case__c.field-meta.xml
<CustomField>
    <fullName>Show_On_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to mark the additional product information on case</description>
    <label>Show On Case</label>
    <type>Checkbox</type>
</CustomField>