force-app/main/default/objects/SVMXC__Case_Line__c/fields/SVMXC__Case__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Lines</relationshipLabel>
    <relationshipName>Case_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>