force-app/main/default/objects/SVMXC__Case_Line__c/fields/SVMXC__Entitlement_History__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Entitlement_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement History</label>
    <referenceTo>SVMXC__Entitlement_History__c</referenceTo>
    <relationshipLabel>Case Lines</relationshipLabel>
    <relationshipName>Case_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>