force-app/main/default/objects/SVMXC__Case_Line__c/fields/SVMXC__Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to an existing installed product record</description>
    <label>Installed Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Case Lines</relationshipLabel>
    <relationshipName>Case_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>