force-app/main/default/objects/SVMXC__Case_Line__c/fields/SVMXC__Line_Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Line_Status__c</fullName>
    <description>Case Line status</description>
    <label>Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>