force-app/main/default/objects/SVMXC__Case_Line__c/fields/SVMXC__Product__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to an existing product record</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Case Lines</relationshipLabel>
    <relationshipName>Case_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>