force-app/main/default/objects/SVMXC__Case_Line__c/fields/SVMXC__Product_Text__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product_Text__c</fullName>
    <description>Product number in text format. Used when product number cannot be resolved to an existing Product record</description>
    <label>Product Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>