force-app/main/default/objects/SVMXC__Case_Line__c/fields/SVMXC__Summary__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Summary__c</fullName>
    <description>Brief summary of the problem with the product</description>
    <label>Problem Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>