force-app/main/default/objects/SVMXC__Case_Line__c/validationRules/CheckCaseStatusAndProfileToLockCLRecords.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCaseStatusAndProfileToLockCLRecords</fullName>
    <active>true</active>
    <description>To lock the fields and related lists on cases based on certain statuses	and profiles.</description>
    <errorConditionFormula>OR(
			AND(
				OR(SVMXC__Case__r.RecordType.Name == $Label.CaseRecordTypeBusinessIssue,SVMXC__Case__r.RecordType.Name == $Label.CaseRecordTypeServiceRequest,SVMXC__Case__r.RecordType.Name == $Label.CaseRecordTypeInquiry) , 
				OR($Profile.Name = $Label.ProfileCustomerService, $Profile.Name = $Label.ProfileTechnicalSupport ,$Profile.Name = $Label.ProfileFieldService, $Profile.Name = $Label.ProfileServiceCenter, $Permission.SS_Service_Ops_Edit_Custom_Perm,
$Profile.Name = $Label.ProductGroupProfessionalService), 
				OR(TEXT( SVMXC__Case__r.Status) == $Label.CaseStatusPendingLogisticsReview, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusPendingQAReview, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusCompleted, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusClosed, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusReopenRequested) 

			), 

			AND(
				OR(SVMXC__Case__r.RecordType.Name == $Label.CaseRecordTypeBusinessIssue,SVMXC__Case__r.RecordType.Name == $Label.CaseRecordTypeServiceRequest,SVMXC__Case__r.RecordType.Name == $Label.CaseRecordTypeInquiry) , 
				$Profile.Name = $Label.ProfileQualityAssurance,
				OR(TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusCompleted, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusClosed, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusReopenRequested) 

			), 

			AND(
				OR(SVMXC__Case__r.RecordType.Name == $Label.CaseRecordTypeBusinessIssue,SVMXC__Case__r.RecordType.Name == $Label.CaseRecordTypeServiceRequest,SVMXC__Case__r.RecordType.Name == $Label.CaseRecordTypeInquiry) , 
				OR($Profile.Name = $Label.ProfileProductSupport,$Profile.Name = $Label.ProfileFieldCompliance),
				OR( 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusInitiated, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusInProgress, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusAwaitingResponseCustomer, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusAwaitingResponseInternal, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusPendingLogisticsReview, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusPendingQAReview, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusCompleted, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusClosed, 
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusReopenRequested,
				TEXT(SVMXC__Case__r.Status) == $Label.CaseStatusReopened)

			)
	)</errorConditionFormula>
    <errorMessage>Case Lines cannot be created or modified for this case.</errorMessage>
</ValidationRule>