force-app/main/default/objects/SVMXC__Case_Line__c/validationRules/CheckEditWhenCaseStatusClosedOrCompleted.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEditWhenCaseStatusClosedOrCompleted</fullName>
    <active>true</active>
    <description>Prevents Edit of record when Case Status is Completed/Closed.</description>
    <errorConditionFormula>AND(
	NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
	OR(
		TEXT(SVMXC__Case__r.Status) ==$Label.Closed,
		TEXT(SVMXC__Case__r.Status)==$Label.Completed
	)
)</errorConditionFormula>
    <errorMessage>Case Lines cannot be created for Closed / Completed cases</errorMessage>
</ValidationRule>