force-app/main/default/objects/SVMXC__Case_Line__c/validationRules/CheckProductSourceIsSAPOnCaseLine.validationRule-meta.xml
<ValidationRule>
        <fullName>CheckProductSourceIsSAPOnCaseLine</fullName>
        <active>true</active>
        <description>Products that do not have Source System as SAP cannot be added to Additional Product - CMCM-165</description>
        <errorConditionFormula>AND(
        NOT($Profile.Name =$Label.Integration_SAP_Service),
        NOT($Profile.Name = $Label.Integration_Service_SNAP_Profile),
        NOT($User.FirstName =$Label.Automated_Process_User),
        NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
        CaseLine_Product_Source_System__c &lt;&gt; &apos;SAP&apos;,
        NOT(ISBLANK(SVMXC__Product__c)),
        OR(ISNEW(),
        ISCHANGED(SVMXC__Product__c))
        )</errorConditionFormula>
        <errorDisplayField>SVMXC__Product__c</errorDisplayField>
        <errorMessage>The Product you selected is an online promotion and can’t be added to Cases or Work Orders. Select the related Product and Save again.</errorMessage>
</ValidationRule>