force-app/main/default/objects/SVMXC__Case_Line__c/validationRules/RestrictShowOnCaseProducts.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictShowOnCaseProducts</fullName>
    <active>true</active>
    <description>Check whether there is another Case line on the case with Show On Case checked</description>
    <errorConditionFormula>AND(
     /*Check if the new case line is added or Show On Case is changed*/
     OR(
         ISNEW(),
         ISCHANGED(Show_On_Case__c)
     ),
     /*Show on case is checked*/
     Show_On_Case__c
     /*Has Additional Product on case is true*/
     ,SVMXC__Case__r.Has_Additional_Product__c  
)</errorConditionFormula>
    <errorMessage>Only one Additional Product can be marked as Show On Case at a time. Please remove Show On Case from other Case Line to mark this Show On Case.</errorMessage>
</ValidationRule>